[tool.poetry]
name = "llm"
version = "0.1.0"
description = "Criação de um modelo básico de chat generativo que utiliza o carregamento de arquivos pdf para gerar resposta."
authors = ["Leon Victor <leon.victor20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<4.0.0"
langchain = "0.0.154"
pypdf2 = ">=3.0.1"
streamlit = ">=1.18.1"
faiss-cpu = ">=1.7.4"
streamlit-extras = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[server]
enableXsrfProtection = false
enableCORS = false
